# clippy-repro

./: BUILD.bazel  WORKSPACE  main.go
